--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .hero{
     /*height: 100vh;*/
     height: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),url(img/111.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),url(111.jpg);
     background-position: center;
     background-size: cover;
     overflow-x: hidden;
